After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754735 - Fixes for iio-sensors-proxy integration
Fixes for iio-sensors-proxy integration
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-08 17:09 UTC by Cosimo Cecchi
Modified: 2015-09-09 14:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: add debug output when IIO proxy creation fails (1.58 KB, patch)
2015-09-08 17:10 UTC, Cosimo Cecchi
committed Details | Review
power: don't assume we have a Screen proxy when IIO proxy is ready (1.44 KB, patch)
2015-09-08 17:10 UTC, Cosimo Cecchi
committed Details | Review
power: refresh ALS state when a Screen proxy is created (903 bytes, patch)
2015-09-08 17:10 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2015-09-08 17:09:57 UTC
See attached patches; these fix a case where automatic brightness is enabled but the switch is not displayed in the panel.
Comment 1 Cosimo Cecchi 2015-09-08 17:10:00 UTC
Created attachment 310921 [details] [review]
power: add debug output when IIO proxy creation fails
Comment 2 Cosimo Cecchi 2015-09-08 17:10:03 UTC
Created attachment 310922 [details] [review]
power: don't assume we have a Screen proxy when IIO proxy is ready

On panel construction, we trigger asynchronous creation of a GDBusProxy
for the IIO sensors daemon and one for the Screen g-s-d interface.
Since there's no guarantee we'll have the screen proxy ready by the time
the IIO proxy is constructed, guard for (priv->screen_proxy != NULL), or
we'll hit a critical.
Comment 3 Cosimo Cecchi 2015-09-08 17:10:07 UTC
Created attachment 310923 [details] [review]
power: refresh ALS state when a Screen proxy is created

The ALS state depends on both the Screen and IIO dbus proxies; refresh
it when the screen proxy is created.
Comment 4 Bastien Nocera 2015-09-09 08:56:44 UTC
Review of attachment 310921 [details] [review]:

Sure.
Comment 5 Bastien Nocera 2015-09-09 08:57:17 UTC
Review of attachment 310922 [details] [review]:

Yep.
Comment 6 Bastien Nocera 2015-09-09 08:57:39 UTC
Review of attachment 310923 [details] [review]:

Yep.
Comment 7 Cosimo Cecchi 2015-09-09 14:25:48 UTC
Thanks for the review!

Attachment 310921 [details] pushed as 3af59f7 - power: add debug output when IIO proxy creation fails
Attachment 310922 [details] pushed as db449dc - power: don't assume we have a Screen proxy when IIO proxy is ready
Attachment 310923 [details] pushed as 40988d3 - power: refresh ALS state when a Screen proxy is created