power: add debug output when IIO proxy creation fails

https://bugzilla.gnome.org/show_bug.cgi?id=754735